--- a/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
+++ b/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
@@ -527,6 +527,7 @@
         // max-width: 410px;
         // max-height: 294px;
         min-height: 170px;
+        max-height: 271px;
         // padding: 0 5px;
         // @media (max-width: 1590px) {
         //   max-width: 254px;
@@ -556,6 +557,9 @@
           // max-height: max-content;
         // }
       }
+      // .allproduct_goods_img_non {
+      //   max-height: 271px;
+      // }
     }
 
     .allproduct_goods_artikul {
@@ -789,7 +793,7 @@
     gap: 20px;
   }
   @media (min-width: 1401px) {
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(4,1fr);
     gap: 20px;
   }
    @media (max-width: 1149px) {
@@ -960,13 +964,12 @@
 .catalogCategoryImageContainer {
   align-items: center;
   display: flex;
-  // height: 200px;
-  height: 45px;
+  height: 61px;
+  // height: 45px;
   justify-content: center;
   position: relative;
-  // width: 134px;
-  width: 45px;
-  // width: 200px;
+  width: 100px;
+  // width: 45px;
   @media (max-width: 1200px) {
     // max-height: 78px;
     max-height: 120px;
