--- a/src/components/layouts/header0/header.module.scss
+++ b/src/components/layouts/header0/header.module.scss
@@ -88,6 +88,10 @@
   padding-top: 20px;
   padding-bottom: 15px;
   background: #0085FF;
+  @media(max-width: 1023px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   @media(max-width: 550px) {
     height: 50px;
     padding-top: 18px;
@@ -98,8 +102,8 @@
 }
 
 .head_cont_polu {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 65px;
+  padding-bottom: 65px;
   @media(max-width: 550px) {
     padding-top: 32px;
     padding-bottom: 30px;
