--- a/src/styles/allCategories.scss
+++ b/src/styles/allCategories.scss
@@ -608,7 +608,8 @@ element.style {
 
   @media (max-width: 1300px) {
     box-sizing: border-box;
-    max-width: 360px;
+    // max-width: 360px;
+    max-width: 450px;
     width: 100%;
   }
 
