--- a/src/styles/MainLayout.scss
+++ b/src/styles/MainLayout.scss
@@ -68,3 +68,10 @@ input[type='number'] {
 .dewrfsceas {
   height: 100% !important;
 }
+
+.wfqegrveasvdeqwv {
+  justify-content: space-around;
+  @media(max-width: 769px) {
+    align-items: normal !important;
+  }
+}
