--- a/src/components/NotFoundBlock/NotFoundBlock.module.scss
+++ b/src/components/NotFoundBlock/NotFoundBlock.module.scss
@@ -12,3 +12,12 @@
 .description {
   font-size: 22px;
 }
+
+.description_btn {
+  font-size: 20px;
+  width: fit-content;
+  margin: 0 auto;
+  border: 1px solid black;
+  padding: 10px 20px;
+  cursor: pointer;
+}
