--- a/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
+++ b/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
@@ -330,6 +330,7 @@
         color: #000;
         text-align: left;
         padding-bottom: 10px;
+        padding-top: 20px;
         border-bottom: 1px solid #0085FF;
 
         @media (max-width: 1200px) {
@@ -338,7 +339,7 @@
         }
         @media (max-width: 500px) {
           padding: 0;
-          margin-top: 0px;
+          margin-top: 50px;
           font-size: 15px;
         }
       }
@@ -889,7 +890,7 @@
   position: sticky;
   top: 133px;
   // margin-top: 80px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .catalogCategoryCellsca {
@@ -1013,11 +1014,13 @@
 .catalogCategoryevdwds {
   background: #f7f7f7;
   border-radius: 24px;
-  // padding: 10px 30px;
-  padding: 5px 10px;
+  padding: 10px 30px;
   position: sticky;
   top: 133px;
-  z-index: 1;
+  z-index: 10;
+  @media(max-width: 1150px) {
+    padding: 5px 10px;
+  }
   @media(max-width: 550px) {
     top: 81px;
   }
@@ -1158,6 +1161,10 @@
   background: #0085FF;
   border-radius: 20px;
   z-index: 2;
+
+  @media (max-width: 500px) {
+    padding: 1px 10px 2px;
+  }
 }
 
 .allproduct_goods_artikul_wrapp {
