--- a/src/components/feedback/feedbackPhone/feedbackPhoneReturnForm/ReturnForm.module.scss
+++ b/src/components/feedback/feedbackPhone/feedbackPhoneReturnForm/ReturnForm.module.scss
@@ -123,8 +123,8 @@
   font-weight: 700;
   outline: none;
   color: #fff;
-  border: 1px solid #404040;
-  background: #404040;
+  border: 1px solid #0085FF;
+  background: #0085FF;
 }
 
 .wrapp_btn_text {
