--- a/src/styles/swiper-carousel.scss
+++ b/src/styles/swiper-carousel.scss
@@ -115,10 +115,10 @@
 
 
 .swiper-wrapper .swiper-slide  {
-  @media (max-width: 1150px) {
+  // @media (max-width: 1150px) {
     margin-right: 8px !important;
     width: fit-content !important;
-  }
+  // }
 }
 
 .swiper-wrapper {
