--- a/src/styles/allCategories.scss
+++ b/src/styles/allCategories.scss
@@ -867,3 +867,83 @@ element.style {
     flex-direction: column;
   }
 }
+
+//suggest
+
+.container {
+  margin: 20px;
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.autosuggest-container {
+  position: relative;
+  width: 100%;
+  // max-width: 500px;
+  margin: 0 auto;
+}
+
+.autosuggest-input {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.autosuggest-input:focus {
+  border-color: #007bff;
+  box-shadow: 0 2px 6px rgba(0, 123, 255, 0.2);
+}
+
+.edrwf {
+  margin-top: 147px;
+  transition: all .3s ease-in-out;
+}
+.edrserfwf {
+  margin-top: 0;
+  transition: all .3s ease-in-out;
+}
+
+
+.autosuggest-suggestions-container {
+  position: absolute;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  z-index: 10;
+  margin-top: 5px;
+  // height: 228%;
+  overflow: auto;
+}
+
+.sevdwfbe {
+  height: 228%;
+}
+
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.suggestion-item:hover {
+  background-color: #f1f1f1;
+}
+
+.autosuggest-suggestion-highlighted {
+  background-color: #007bff;
+  color: white;
+}
