--- a/src/styles/allCategories.scss
+++ b/src/styles/allCategories.scss
@@ -947,3 +947,11 @@ label {
   background-color: #007bff;
   color: white;
 }
+
+.ewred {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  width: fit-content;
+  margin-left: auto;
+}
