--- a/src/app/Favourites/Favourites.module.scss
+++ b/src/app/Favourites/Favourites.module.scss
@@ -209,14 +209,15 @@
                     margin-bottom: 10px;
                   }
                   .unit_wrapp_close {
-                    background: url('https://cdn0.divan.ru/app/v1/node/website/928f80cfaf89d536f4eb.svg')
+                    background: url('../../assets/img/social_icon/111.svg')
                       no-repeat 50%;
                     cursor: pointer;
-                    height: 18px;
+                    height: 30px;
+                    width: 30px;
                     position: absolute;
                     right: 10px;
                     top: 10px;
-                    width: 18px;
+                    // width: 18px;
                     z-index: 2;
                   }
                   // .item_unit_photo {
