--- a/src/styles/allCategories.scss
+++ b/src/styles/allCategories.scss
@@ -955,3 +955,64 @@ label {
   width: fit-content;
   margin-left: auto;
 }
+
+.marginscavewg {
+  margin-left: 0;
+}
+
+.icon-sizeweqfw {
+  margin-left: 0;
+  width: 25px;
+  height: 25px;
+  margin-inline-end: 0 !important;
+  margin-inline-start: 0 !important;
+}
+
+.vkev {
+  color: #0077FF;
+}
+
+.whatev {
+  color: #25D366;
+}
+
+.tgev {
+  color: #27a7e7;
+}
+
+
+.qwdfewgr {
+  font-size: 20px;
+  color: #000 !important;
+  border-bottom: 1px solid;
+  &:hover {
+    color: #0085FF !important;
+  }
+}
+
+.cevwr {
+  font-size: 18px;
+  color: #000 !important;
+  &:hover {
+    color: #0085FF !important;
+  }
+}
+
+.asvdsfbdgf {
+  gap: 20px;
+}
+
+.asfegrbe {
+  display: none !important;
+  @media(max-width: 549px) {
+    display: flex !important;
+  }
+}
+
+.dwqfewgrbef {
+  display: flex !important;
+
+  @media(max-width: 549px) {
+    display: none !important;
+  }
+}
