--- a/src/components/layouts/Footer/Footer.module.scss
+++ b/src/components/layouts/Footer/Footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
   padding: 50px 0 10px;
-  background-color: #0085FF;
+  // background-color: #0085FF;
+  background-color: #eeeef0;
   color: black;
 
   @media (max-width: 1200px) {
@@ -73,12 +74,13 @@
         font-weight: 700;
         margin: 0 0 20px;
         white-space: nowrap;
-        color: #fff;
+        color: #000;
+                // color: #fff;
         @media (max-width: 1100px) {
           font-size: 21px;
         }
         @media (max-width: 550px) {
-          font-size: 25px;
+          font-size: 30px;
         }
       }
 
@@ -95,7 +97,8 @@
           .nav_link {
             width: fit-content;
             display: block;
-            color: #fff;
+            color: #000;
+                        // color: #fff;
             font-size: 16px;
             line-height: 18px;
             font-weight: 700;;
@@ -133,7 +136,8 @@
           line-height: 22px;
           font-weight: 600;
           margin: 0 0 5px;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
 
           @media (max-width: 1100px) {
             font-size: 17px;
@@ -151,10 +155,12 @@
         .nav_nytime_time {
           margin: 0 0 5px;
           font-weight: 700;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           font-size: 18px;
           line-height: 20px;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           margin: 0;
 
           @media (max-width: 1100px) {
@@ -171,12 +177,14 @@
       }
 
       .footer_nav__callwu {
-        color: #fff;
+        color: #000;
+                // color: #fff;
         margin-bottom: 20px;
 
         .nav__callwu_title {
           font-size: 20px;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           line-height: 22px;
           font-weight: 600;
           margin: 0 0 5px;
@@ -196,7 +204,8 @@
 
         .footer_callwu_link {
           margin-bottom: 5px;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           display: flex;
           align-items: center;
           gap: 10px;
@@ -206,7 +215,8 @@
             display: flex;
           }
 
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           .footer_callwu__icon {
             display: block;
             transform: translateX(5px);
@@ -242,7 +252,8 @@
             font-size: 16px;
             line-height: 18px;
             font-weight: 700;;
-            color: #fff;
+            color: #000;
+                        // color: #fff;
             display: block;
             margin-left: 10px;
 
@@ -272,7 +283,8 @@
           font-weight: 600;
           font-size: 20px;
           line-height: 25px;
-          color: #fff;
+          color: #000;
+                    // color: #fff;
           margin: 0 0 5px;
 
           @media (max-width: 1100px) {
@@ -372,7 +384,8 @@
           }
 
           .nav_work__link {
-          color: #fff;
+          color: #000;
+                    // color: #fff;
             font-weight: 700;;
             font-size: 16px;
             line-height: 18px;
@@ -385,7 +398,8 @@
   }
 }
 .footer_create {
-          color: #fff;
+          color: #000;
+                    // color: #fff;
   text-align: center;
   font-weight: 700;;
   font-size: 20px;
@@ -402,10 +416,12 @@
 .footer_nav__order_header {
   font-weight: 700;
   font-size: 20px;
-  color: #fff;
+  color: #000;
+    // color: #fff;
   margin: 0 0 20px;
   span {
-    color: #fff;
+    color: #000;
+        // color: #fff;
     font-weight: 700;
   }
   @media (max-width: 1100px) {
@@ -467,7 +483,8 @@
 
 .footer_privacy {
   display: block;
-  color: #fff;
+  color: #000;
+    // color: #fff;
   @media (max-width: 1100px) {
     font-size: 14px;
   }
@@ -522,7 +539,8 @@
 
 .logo_main {
   font-size: 25px;
-  color: #fff;
+  color: #000;
+    // color: #fff;
   @media(max-width: 465px) {
     font-size: 20px;
   }
@@ -531,7 +549,8 @@
   }
 }
 .nav_link_default {
-  color: #fff;
+  color: #000;
+    // color: #fff;
 }
 
 .footer_priv_log_dessa {
@@ -556,6 +575,9 @@
   flex-direction: column;
   gap: 30px;
   align-items: center;
+  @media (max-width: 725px) {
+    display: none;
+  }
 }
 
 .nav_link_dvr {
