--- a/src/styles/MainLayout.scss
+++ b/src/styles/MainLayout.scss
@@ -79,3 +79,24 @@ input[type='number'] {
 .mb-5 {
   margin-bottom: 1.25rem !important;
 }
+
+
+.wevdwf {
+  @media(max-width: 550px) {
+    display: none;
+  }
+}
+
+.qwfegwr {
+  @media(max-width: 550px) {
+    width: 100px;
+  }
+}
+
+.sadvbf {
+  margin-top: 20px;
+}
+
+.wefvwfbssss {
+  width: 50% !important;
+}
