--- a/src/styles/MainLayout.scss
+++ b/src/styles/MainLayout.scss
@@ -100,3 +100,9 @@ input[type='number'] {
 .wefvwfbssss {
   width: 50% !important;
 }
+
+.sdfdgnb {
+  @media(max-width: 550px) {
+    margin-top: 0px;
+  }
+}
