--- a/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
+++ b/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
@@ -586,6 +586,10 @@
           max-height: 290px;
         }
     
+        @media (max-width: 550px) {
+          min-height: auto;
+        }
+    
         @media (max-width: 700px) {
           // min-height: max-content;
           // min-height: -moz-max-content;
