--- a/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
+++ b/src/components/GoodsCatalogue/GoodsCatalogue.module.scss
@@ -1147,7 +1147,7 @@
     margin: 6px 0;
   }
   @media (max-width: 1150px) {
-    color: #0085FF;
+    // color: #0085FF;
   }
   @media (max-width: 550px) {
     font-size: 12px;
