--- a/src/styles/swiper-carousel.scss
+++ b/src/styles/swiper-carousel.scss
@@ -118,7 +118,7 @@
 .swiper-wrapper .swiper-slide  {
   // @media (max-width: 1150px) {
     margin-right: 8px !important;
-    margin-bottom: auto !important;
+    // margin-bottom: auto !important;
     // width: fit-content !important;
   // }
 }
