--- a/src/components/layouts/header0/header.module.scss
+++ b/src/components/layouts/header0/header.module.scss
@@ -369,6 +369,17 @@
 .sacsvfbdg {
   font-size: 14px;
   top: 10px;
-  right: 17px;
+  right: 19px;
   color: #fff;
+}
+
+.qwfevdwf {
+  padding: 12px 9px;
+  background: #fff;
+  border-radius: 50%;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  @media (max-width: 550px) {
+    margin-bottom: 0px;
+  }
 }
