--- a/src/styles/MainLayout.scss
+++ b/src/styles/MainLayout.scss
@@ -106,3 +106,9 @@ input[type='number'] {
     margin-top: 0px;
   }
 }
+
+.svedwrfeg {
+  @media(max-width: 480px) {
+    padding-top: 30px !important;
+  }
+}
