--- a/src/app/Home/SectionChoise/SectionChoise.module.scss
+++ b/src/app/Home/SectionChoise/SectionChoise.module.scss
@@ -1,141 +1,285 @@
+// .section_butterfly {
+//   position: relative;
+//   // margin-bottom: 50px;
+//   flex-direction: column;
+//   display: flex;
+//   justify-content: center;
+//   background: #eeeef0;
+//   align-items: center;
+//   padding: 100px 70px;
+//   @media(max-width: 540px) {
+//     padding: 50px 70px 65px;
+//     flex-direction: column;
+//   }
+//   .butterfly_back {
+//     display: flex;
+//     // background: url('../../../assets/img/img/btbunner2.webp') left repeat;
+//     // background-size: cover; 
+//     width: 100%;
+//     // height: 35vw;
+//     color: #fdfdfd;
+//     margin: 0 auto;
+//     align-items: center;
+//     // justify-content: space-around;
+//     justify-content: center;
+//     gap: 130px;
+//     border-radius: 10px;
+//     @media(max-width: 1200px) {
+//       gap: 60px;
+//     }
+//     @media(max-width: 540px) {
+//       padding: 50px 70px 0px;
+//       flex-direction: column;
+//     }
+//   }
+// }
+
+// .krugi {
+//   background: url('../../../assets/img/img/currently___debora_s.png') center no-repeat;
+//   background-size: cover;
+//   width: 450px;
+//   height: 450px;
+//   border-radius: 50%;
+//   margin-top: 70px;
+//   position: relative;
+//   @media(max-width: 1200px) {
+//     width: 350px;
+//     height: 350px;
+//   }
+//   @media(max-width: 900px) {
+//     width: 250px;
+//     height: 250px;
+//   }
+//   @media(max-width: 670px) {
+//     width: 150px;
+//     height: 150px;
+//   }
+//   @media(max-width: 540px) {
+//     padding: 50px 70px 65px;
+//     flex-direction: column;
+//   }
+//   @media(max-width: 540px) {
+//     width: 250px;
+//     height: 250px;
+//     margin-top: 0;
+//   }
+  
+//   &:before {
+//     content: "Продукты";
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     color: white;
+//     font-size: 38px;
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: rgba(1, 1, 1, 0.3);
+//     border-radius: 50%;
+
+//     @media(max-width: 670px) {
+//       font-size: 25px;
+//     }
+//   }
+// }
+
+// .krugi1 {
+//   background: url('../../../assets/img/img/shutterstock_4848103.jpg') center no-repeat;
+//   background-size: cover;
+//   width: 450px;
+//   height: 450px;
+//   border-radius: 50%;
+//   margin-top: 70px;
+//   position: relative;
+//   @media(max-width: 1200px) {
+//     width: 350px;
+//     height: 350px;
+//   }
+//   @media(max-width: 900px) {
+//     width: 250px;
+//     height: 250px;
+//   }
+//   @media(max-width: 670px) {
+//     width: 150px;
+//     height: 150px;
+//   }
+//   @media(max-width: 540px) {
+//     padding: 50px 70px 65px;
+//     flex-direction: column;
+//   }
+//   @media(max-width: 540px) {
+//     width: 250px;
+//     height: 250px;
+//     margin-top: 0;
+//   }
+  
+//   &:before {
+//     content: "Ресторан";
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     color: white;
+//     font-size: 38px;
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: rgba(1, 1, 1, 0.3);
+//     border-radius: 50%;
+
+//   @media(max-width: 670px) {
+//     font-size: 25px;
+//   }
+//   }
+// }
+
+// .section_butterfly_cdvsz {
+//   font-size: 39px;
+// }
+
+
+
+
 .section_butterfly {
   position: relative;
-  // margin-bottom: 50px;
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  background: #eeeef0;
   align-items: center;
   padding: 100px 70px;
-  @media(max-width: 540px) {
-    padding: 50px 70px 65px;
-    flex-direction: column;
+  background: #eeeef0;
+
+  @media(max-width: 1200px) {
+    gap: 60px;
   }
+  @media (max-width: 540px) {
+    padding: 50px 70px 65px;
+  }
+
   .butterfly_back {
     display: flex;
-    // background: url('../../../assets/img/img/btbunner2.webp') left repeat;
-    // background-size: cover; 
     width: 100%;
-    // height: 35vw;
-    color: #fdfdfd;
-    margin: 0 auto;
-    align-items: center;
-    // justify-content: space-around;
     justify-content: center;
     gap: 130px;
-    border-radius: 10px;
-    @media(max-width: 1200px) {
+
+    @media (max-width: 1200px) {
       gap: 60px;
     }
-    @media(max-width: 540px) {
-      padding: 50px 70px 0px;
+    @media (max-width: 540px) {
       flex-direction: column;
+      padding: 0;
     }
   }
-}
 
-.krugi {
-  background: url('../../../assets/img/img/currently___debora_s.png') center no-repeat;
-  background-size: cover;
-  width: 450px;
+  // .image_wrapper {
+  //   position: relative;
+  //   width: 450px;
+  //   height: 450px;
+  //   border-radius: 50%;
+  //   overflow: hidden;
+
+  //   @media (max-width: 1200px) {
+  //     width: 350px;
+  //     height: 350px;
+  //   }
+  //   @media (max-width: 900px) {
+  //     width: 250px;
+  //     height: 250px;
+  //   }
+  //   @media (max-width: 670px) {
+  //     width: 150px;
+  //     height: 150px;
+  //   }
+  //   @media(max-width: 540px) {
+  //     width: 250px;
+  //     height: 250px;
+  //   }
+  // }
+.image_wrapper {
+  position: relative; // Позиционирование для наложения текста
+  width: 450px;       // Задание размеров контейнера
   height: 450px;
-  border-radius: 50%;
-  margin-top: 70px;
-  position: relative;
-  @media(max-width: 1200px) {
+  border-radius: 50%; // Круглая форма контейнера
+  overflow: hidden;   // Скрытие выступающих частей изображения
+
+  @media (max-width: 1200px) {
     width: 350px;
     height: 350px;
   }
-  @media(max-width: 900px) {
+
+  @media (max-width: 900px) {
     width: 250px;
     height: 250px;
   }
-  @media(max-width: 670px) {
+
+  @media (max-width: 670px) {
     width: 150px;
     height: 150px;
-  }
-  @media(max-width: 540px) {
-    padding: 50px 70px 65px;
-    flex-direction: column;
-  }
-  @media(max-width: 540px) {
-    width: 250px;
-    height: 250px;
-    margin-top: 0;
-  }
-  
-  &:before {
-    content: "Продукты";
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 38px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(1, 1, 1, 0.3);
-    border-radius: 50%;
+  }}
 
-    @media(max-width: 670px) {
-      font-size: 25px;
-    }
+  // .image {
+  //   border-radius: 50%;
+  // }
+  .image {
+    display: block;
+    width: 100%;        // Изображение растягивается на всю ширину контейнера
+    height: 100%;       // и высоту
+    object-fit: cover;  // Убедиться, что изображение полностью заполняет контейнер
+    border-radius: 50%; // Круглая форма изображения (на случай, если это нужно)
+  }
+
+  // .image_text {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   color: white;
+  //   font-size: 38px;
+  //   background: rgba(1, 1, 1, 0.3);
+  //   border-radius: 50%;
+
+  //   @media (max-width: 670px) {
+  //     font-size: 25px;
+  //   }
+  // }
+  .image_text {
+  position: absolute;     // Позволяет наложить текст поверх изображения
+  top: 0;                 // Привязка к верхнему краю контейнера
+  left: 0;                // Привязка к левому краю контейнера
+  width: 100%;            // Текст занимает всю ширину контейнера
+  height: 100%;           // и высоту
+  display: flex;          // Центрирование текста
+  justify-content: center;
+  align-items: center;
+  color: white;           // Белый цвет текста
+  font-size: 38px;        // Размер шрифта
+  background: rgba(1, 1, 1, 0.3); // Прозрачный фон для читаемости текста
+  border-radius: 50%;     // Совпадает с формой контейнера
+
+  @media (max-width: 670px) {
+    font-size: 25px; // Меньший текст для маленьких экранов
   }
 }
-
-.krugi1 {
-  background: url('../../../assets/img/img/shutterstock_4848103.jpg') center no-repeat;
-  background-size: cover;
-  width: 450px;
-  height: 450px;
-  border-radius: 50%;
-  margin-top: 70px;
-  position: relative;
-  @media(max-width: 1200px) {
-    width: 350px;
-    height: 350px;
-  }
-  @media(max-width: 900px) {
-    width: 250px;
-    height: 250px;
-  }
-  @media(max-width: 670px) {
-    width: 150px;
-    height: 150px;
-  }
-  @media(max-width: 540px) {
-    padding: 50px 70px 65px;
-    flex-direction: column;
-  }
-  @media(max-width: 540px) {
-    width: 250px;
-    height: 250px;
-    margin-top: 0;
-  }
-  
-  &:before {
-    content: "Ресторан";
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 38px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(1, 1, 1, 0.3);
-    border-radius: 50%;
-
-  @media(max-width: 670px) {
-    font-size: 25px;
-  }
-  }
 }
 
 .section_butterfly_cdvsz {
   font-size: 39px;
+}
+
+
+
+.krugi {
+  margin-top: 70px;
+  position: relative;
+  @media(max-width: 540px) {
+    margin: 0 auto;
+    margin-top: 0;
+  }
 }
