--- a/src/styles/swiper-carousel.scss
+++ b/src/styles/swiper-carousel.scss
@@ -119,8 +119,35 @@
   // @media (max-width: 1150px) {
     margin-right: 8px !important;
     // margin-bottom: auto !important;
-    // width: fit-content !important;
-  // }
+    // }
+    @media (max-width: 760px) {
+      width: fit-content !important;
+      margin-right: 83px !important;
+    }
+    @media (max-width: 700px) {
+      margin-right: 64px !important;
+    }
+    @media (max-width: 650px) {
+      margin-right: 45px !important;
+    }
+    @media (max-width: 600px) {
+      margin-right: 30px !important;
+    }
+    @media (max-width: 450px) {
+      width: fit-content !important;
+      margin-right: 34px !important;
+    // margin-left: 12px;
+    }
+    @media (max-width: 445px) {
+      width: fit-content !important;
+      margin-right: 22px !important;
+      // margin-left: 8px;
+    }
+    @media (max-width: 405px) {
+      width: fit-content !important;
+      margin-right: 17px !important;
+      // margin-left: 8px;
+    }
 }
 
 .swiper-wrapper {
